// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sinonToReturnWith a call that throws is not considered to have returned 1`] = `
"[2mexpect.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32mundefined[39m
Received: function call threw an error

Number of returns: [31m0[39m
Number of calls:   [31m1[39m"
`;

exports[`sinonToReturnWith includes the custom mock name in the error message 1`] = `
"[2mexpect([22m[31mnamed-mock[39m[2m).[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m\\"foo\\"[39m

Number of returns: [31m0[39m"
`;

exports[`sinonToReturnWith works only on stubs or sinon.spies 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

[1mMatcher error[22m: [31mreceived[39m value must be a stub or spy function

Received has type:  function
Received has value: [31m[Function fn][39m"
`;

exports[`sinonToReturnWith works when not called 1`] = `
"[2mexpect.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m\\"foo\\"[39m

Number of returns: [31m0[39m"
`;

exports[`sinonToReturnWith works with Immutable.js objects directly created 1`] = `
"[2mexpect.[22mnot[2m.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: not [32mImmutable.Map {\\"a\\": {\\"b\\": \\"c\\"}}[39m

Number of returns: [31m1[39m"
`;

exports[`sinonToReturnWith works with Immutable.js objects indirectly created 1`] = `
"[2mexpect.[22mnot[2m.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: not [32mImmutable.Map {\\"a\\": {\\"b\\": \\"c\\"}}[39m

Number of returns: [31m1[39m"
`;

exports[`sinonToReturnWith works with Map 1`] = `
"[2mexpect.[22mnot[2m.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: not [32mMap {1 => 2, 2 => 1}[39m

Number of returns: [31m1[39m"
`;

exports[`sinonToReturnWith works with Map 2`] = `
"[2mexpect.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32mMap {\\"a\\" => \\"b\\", \\"b\\" => \\"a\\"}[39m
Received: [31mMap {1 => 2, 2 => 1}[39m

Number of returns: [31m1[39m"
`;

exports[`sinonToReturnWith works with Set 1`] = `
"[2mexpect.[22mnot[2m.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: not [32mSet {1, 2}[39m

Number of returns: [31m1[39m"
`;

exports[`sinonToReturnWith works with Set 2`] = `
"[2mexpect.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32mSet {3, 4}[39m
Received: [31mSet {1, 2}[39m

Number of returns: [31m1[39m"
`;

exports[`sinonToReturnWith works with argument that does match 1`] = `
"[2mexpect.[22mnot[2m.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: not [32m\\"foo\\"[39m

Number of returns: [31m1[39m"
`;

exports[`sinonToReturnWith works with argument that does not match 1`] = `
"[2mexpect.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m\\"bar\\"[39m
Received: [31m\\"foo\\"[39m

Number of returns: [31m1[39m"
`;

exports[`sinonToReturnWith works with more calls than the limit 1`] = `
"[2mexpect.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m\\"bar\\"[39m
Received
       1: [31m\\"foo1\\"[39m
       2: [31m\\"foo2\\"[39m
       3: [31m\\"foo3\\"[39m

Number of returns: [31m6[39m"
`;

exports[`sinonToReturnWith works with undefined 1`] = `
"[2mexpect.[22mnot[2m.[22msinonToReturnWith[2m([22m[32mexpected[39m[2m)[22m

Expected: not [32mundefined[39m

Number of returns: [31m1[39m"
`;
